# hybridshell

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  README.adoc  binding.gyp  iojs.cmake  moc.gypi  package.json  qrcc.gypi  qtnode.qrc
js/: qtnode.js
lib/: qt.js
src/: main.cpp  nodejsevaluator.cc  nodejsevaluator.h  qt.cc  qt_v8.h  webchannel.cc  webchannel.h  webchanneltransport.cc  webchanneltransport.h
src/QtGui/: qapplication.cc  qapplication.h
src/QtWebEngine/: qwebengineview.cc  qwebengineview.h
